Mon Mar 14 11:41:23 1994  Jeffrey A. Law  (law@snake.cs.utah.edu)

	* som.c (som_bfd_count_ar_symbols): Fix typo.

	* som.c (som_object_setup): Set EXEC_P, D_PAGED, WP_TEXT, and
	HAS_RELOC based on the object's magic number.
	(make_unique_section): Delete function.  BFD and its users are
	prepared to handle multiple sections with the same name.
	(setup_sections): Allocate space on the BFD's obstack to hold
	section names.  Use bfd_make_setion_anyway rather than the
	obsolete make_unique_section.
	(som_prep_headers): Choose the correct SOM magic number based
	on the BFD's flags.
	(som_bfd_fill_in_ar_symbols): Return false, not NULL on error.

Sat Mar 12 09:46:09 1994  Ian Lance Taylor  (ian@cygnus.com)

	* elf32-ppc.c: Renamed from elf32-powerpc.c.
 	start-sanitize-powerpc-netware
	* nlm32-ppc.c: Renamed from nlm32-powerpc.c.
 	end-sanitize-powerpc-netware
	* Makefile.in, configure.in: Corresponding changes.

Fri Mar 11 22:27:19 1994  Ian Lance Taylor  (ian@tweedledumb.cygnus.com)

	* elf32-powerpc.c: Extensive changes to update to preliminary ABI.

Fri Mar 11 00:34:59 1994  Peter Schauer  (pes@regent.e-technik.tu-muenchen.de)

	* sunos.c (sunos_read_dynamic_info):  Assume that dynamic info
	is always located at the start of the data section to allow
	recovery of the dynamic info from a stripped executable.
	* ecoff.c (ecoff_styp_to_sec_flags):  Handle STYP_PDATA, STYP_XDATA
	and STYP_COMMENT.

Wed Mar  9 17:17:53 1994  Jim Kingdon  (kingdon@lioth.cygnus.com)

	* libbfd-in.h: Remove alloca cruft.  It was missing some necessary
	cruft (like the #pragma alloca for AIX).
	In addition to that problem, the C alloca calls xmalloc, which
	means checking for being out of memory can't work right.  The
	following changes remove all uses of alloca from BFD.
	* hosts/solaris2.h: Remove alloca cruft.
	* som.c: Replace alloca with a fixed size auto array.
	* aoutx.h, elfcode.h, nlmcode.h, bout.c, coff-alpha.c, ecoff.c,